...
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic[1]"
        tools:text="image AVATAR" />


    <TextView
        android:id="@+id/detailnamepicture"
        android:layout_width="365dp"
        android:layout_height="43dp"
        android:layout_marginBottom="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
...
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Name" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton


        android:id="@+id/fabAddfavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"

        android:layout_marginTop="244dp"
        app:backgroundTint="#F5F5F5"
...
